--- a/ParserImplementation/CMakeLists.txt
+++ b/ParserImplementation/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16.0)
 
 project(parser-lib VERSION 1.0.0 LANGUAGES CXX)
 
+enable_testing()
+
 # include_directories("${CMAKE_SOURCE_DIR}/ParserImplementation/Interfaces" "${PROJECT_NAME}/ParserImplementation/Source")
 
 add_library(${PROJECT_NAME} Interfaces/Parser.h Interfaces/MyParser.h Source/MyParser.cpp Interfaces/Visitor.h
@@ -13,4 +15,4 @@ Interfaces/Factories.h Source/Factories.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC Interfaces)
 
-target_link_libraries(${PROJECT_NAME} CONAN_PKG::spdlog)
+target_link_libraries(${PROJECT_NAME} CONAN_PKG::spdlog CONAN_PKG::gtest)
